# SimpleClangCppWin32

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json
cmake/: ProjectSettings.cmake  SetFromEnv.cmake
src/: VersionInfo.rc.in
src/App/: CMakeLists.txt  Main.cpp
src/Common/: CMakeLists.txt  Common.cpp
